# obs-recursion-effect

./: CMakeLists.txt  README.md  buildspec.json  installer.iss.in  recursion-effect.c  recursion-effect.h  recursion-effect.rc
.github/workflows/: build.yml
CI/macos/: recursion-effect.pkgproj
data/effects/: render.effect
data/locale/: en-US.ini
